--- a/ui/src/index.html
+++ b/ui/src/index.html
@@ -5,19 +5,6 @@
     <title>BotanicNG</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
-    <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-
-    <!-- build:css({.tmp/serve,src}) styles/vendor.css -->
-    <!-- bower:css -->
-    <!-- run `gulp inject` to automatically populate bower styles dependencies -->
-    <!-- endbower -->
-    <!-- endbuild -->
-
-    <!-- build:css({.tmp/serve,src}) styles/app.css -->
-    <!-- inject:css -->
-    <!-- css files will be automatically insert here -->
-    <!-- endinject -->
-    <!-- endbuild -->
   </head>
   <body>
     <!--[if lt IE 10]>
@@ -75,38 +62,7 @@
       </div>
     </div>
 
-    <!-- build:js(src) scripts/vendor.js -->
-
-    <!-- begin angular-masonry -->
-    <script src="../bower_components/jquery/dist/jquery.js"></script>
-    <script src="../bower_components/jquery-bridget/jquery.bridget.js"></script>
-    <script src="../bower_components/get-style-property/get-style-property.js"></script>
-    <script src="../bower_components/get-size/get-size.js"></script>
-    <script src="../bower_components/eventEmitter/EventEmitter.js"></script>
-    <script src="../bower_components/eventie/eventie.js"></script>
-    <script src="../bower_components/doc-ready/doc-ready.js"></script>
-    <script src="../bower_components/matches-selector/matches-selector.js"></script>
-    <script src="../bower_components/fizzy-ui-utils/utils.js"></script>
-    <script src="../bower_components/outlayer/item.js"></script>
-    <script src="../bower_components/outlayer/outlayer.js"></script>
-    <script src="../bower_components/masonry/masonry.js"></script>
-    <script src="../bower_components/imagesloaded/imagesloaded.js"></script>
-    <!-- end angular-masonry -->
-
-    <!-- bower:js -->
-    <!-- run `gulp inject` to automatically populate bower script dependencies -->
-    <!-- endbower -->
-    <!-- endbuild -->
-
-    <!-- build:js({.tmp/serve,.tmp/partials,src}) scripts/app.js -->
-    <!-- inject:js -->
-    <!-- js files will be automatically insert here -->
-    <!-- endinject -->
-
-    <!-- inject:partials -->
-    <!-- angular templates will be automatically converted in js and inserted here -->
-    <!-- endinject -->
-    <!-- endbuild -->
+    <script src="bundle.js"></script>
 
   </body>
 </html>
